# fera_robot_firmware

./: .gitignore  CMakeLists.txt  README.md  config.hpp  firmware.cpp
application/: CMakeLists.txt  app_base.hpp  imu.cpp  imu.hpp  motor.cpp  motor.hpp
core/: CMakeLists.txt  message.hpp  middleware.cpp  middleware.hpp  rtos.cpp  rtos.hpp  subscriber.hpp
core/rtos/: FreeRTOSConfig.h
hal/: CMakeLists.txt  gpio.cpp  gpio.hpp  i2c.cpp  i2c.hpp  pwm.cpp  pwm.hpp  spi.cpp  spi.hpp  uart.cpp  uart.hpp
logger/: CMakeLists.txt  logger.hpp
service/: CMakeLists.txt  FreeRTOSConfig.h  comm.cpp  comm.hpp  encoder.cpp  encoder.hpp  encoder_drive.cpp  encoder_drive.hpp  imu_drive.cpp  imu_drive.hpp  motor_drive.cpp  motor_drive.hpp  rtos.cpp  rtos.hpp  service_base.hpp  uros.cpp  uros.hpp
